unreleased
==========

- command line option to set real-time priority for IO threads
- allow to select individual extended controls in ALSA plug-in
- codec-specific delay adjustment with ALSA control and persistency
- fix for SBC codec and audio scaling on big-endian platforms
- fix mSBC decode for MTU > 60 bytes (e.g. Realtek USB adapters)
- bluealsa-aplay: option to auto-select volume mode for used PCM
- support use of libfreeaptx for apt-X and apt-X HD codecs

bluez-alsa v4.1.1 (2023-06-24)
==============================

- fix for oFono HF role SCO socket authorization
- fix for mSBC MTU adjustment for Realtek USB adapters
- bluealsa-aplay: fix playback after BT codec update

bluez-alsa v4.1.0 (2023-05-23)
==============================

- removed deprecated org.bluealsa.Manger1 D-Bus interface
- persistent storage for PCM volume and mute state
- PCM volume control with oFono HFP-AG and HFP-HF profiles
- transport running state exported in PCM D-Bus interface
- A2DP codec configuration blob exported in PCM D-Bus interface
- optional non-dynamic operation mode for ALSA control plug-in
- optional extended controls for ALSA control plug-in
- changed RFCOMM D-Bus API features property to array of strings
- fix for SCO link establishment for oFono HFP-AG profile
- fix for volume control for HSP-HS and HFP-HF profiles
- stability fixes for ALSA PCM I/O and control plug-ins
- bluealsa-aplay: fix for volume synchronization
- lots of fixes for race conditions (TSAN)
- lots of updates to the manual pages

bluez-alsa v4.0.0 (2022-06-03)
==============================

- changes in command line options (no backward compatibility)
- implement D-Bus ObjectManager (deprecate org.bluealsa.Manger1)
- optional support for A2DP FastStream codec (music & voice)
- optional support for A2DP LC3plus codec (music & voice)
- enhanced SBC XQ mode (XQ+) which bumps bitrate to 595 kbps
- packet loss concealment (PLC) for HFP with mSBC codec