@@ -25,6 +25,7 @@
 #include <sys/time.h>
 #include <unistd.h>
 
+#include <alsa/asoundlib.h>
 #include <bluetooth/bluetooth.h>
 #include <bluetooth/hci.h>
 
@@ -42,6 +43,7 @@
 #include "bluez.h"
 #include "hci.h"
 #include "hfp.h"
+#include "midi.h"
 #include "sco.h"
 #include "storage.h"
 #include "shared/defs.h"
@@ -597,11 +599,12 @@ fail:
 #if ENABLE_MIDI
 
 static int transport_acquire_bt_midi(struct ba_transport *t) {
-	(void)t;
-	return 0;
+	return midi_transport_alsa_seq_create(t);
 }
 
 static int transport_release_bt_midi(struct ba_transport *t) {
+
+	midi_transport_alsa_seq_delete(t);
 
 	if (t->midi.ble_fd_write != -1) {
 		debug("Releasing BLE-MIDI write link: %d", t->midi.ble_fd_write);
@@ -630,10 +633,28 @@ struct ba_transport *ba_transport_new_midi(
 
 	t->profile = profile;
 
+	t->midi.seq_port = -1;
+	t->midi.ble_fd_write = -1;
+	t->midi.ble_fd_notify = -1;
+
+	int err;
+	if ((err = snd_midi_event_new(1024, &t->midi.seq_parser)) < 0) {
+		error("Couldn't create MIDI event decoder: %s", snd_strerror(err));
+		goto fail;
+	}
+
+	/* Disable MIDI running status generated by the decoder. */
+	snd_midi_event_no_status(t->midi.seq_parser, 1);
+
 	t->acquire = transport_acquire_bt_midi;
 	t->release = transport_release_bt_midi;
 
 	return t;
+
+fail:
+	ba_transport_unref(t);
+	errno = -err;
+	return NULL;
 }
 
 #endif
@@ -821,6 +842,12 @@ void ba_transport_unref(struct ba_transport *t) {
 		free(t->sco.ofono_dbus_path_modem);
 #endif
 	}
+#if ENABLE_MIDI
+	else if (t->profile & BA_TRANSPORT_PROFILE_MIDI) {
+		if (t->midi.seq_parser != NULL)
+			snd_midi_event_free(t->midi.seq_parser);
+	}
+#endif
 
 	if (t->thread_manager_pipe[0] != -1)
 		close(t->thread_manager_pipe[0]);
@@ -989,6 +1016,11 @@ void ba_transport_set_codec(
  *   errno is set to indicate the error. */
 int ba_transport_start(struct ba_transport *t) {
 
+#if ENABLE_MIDI
+	if (t->profile & BA_TRANSPORT_PROFILE_MIDI)
+		return midi_transport_start(t);
+#endif
+
 	/* For A2DP Source profile only, it is possible that BlueZ will
 	 * activate the transport following a D-Bus "Acquire" request before the
 	 * client thread has completed the acquisition procedure by initializing
@@ -1032,6 +1064,11 @@ int ba_transport_start(struct ba_transport *t) {
  * This function waits for transport IO threads termination. It is not safe
  * to call it from IO thread itself - it will cause deadlock! */
 int ba_transport_stop(struct ba_transport *t) {
+
+#if ENABLE_MIDI
+	if (t->profile & BA_TRANSPORT_PROFILE_MIDI)
+		return midi_transport_stop(t);
+#endif
 
 	if (t->profile & BA_TRANSPORT_PROFILE_MASK_A2DP) {
 		if (ba_transport_pcm_state_check_terminated(&t->a2dp.pcm) &&
@@ -1110,6 +1147,11 @@ int ba_transport_stop_if_no_clients(struct ba_transport *t) {
 
 int ba_transport_acquire(struct ba_transport *t) {
 
+#if ENABLE_MIDI
+	if (t->profile & BA_TRANSPORT_PROFILE_MIDI)
+		return t->acquire(t);
+#endif
+
 	bool acquired = false;
 	int fd = -1;
 
@@ -1164,6 +1206,11 @@ final:
 }
 
 int ba_transport_release(struct ba_transport *t) {
+
+#if ENABLE_MIDI
+	if (t->profile & BA_TRANSPORT_PROFILE_MIDI)
+		return t->release(t);
+#endif
 
 	int ret = 0;
 
